--- a/index.css
+++ b/index.css
@@ -1,52 +1,80 @@
 
-
 *{
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 0px;
 }
 
 .bg-container{
     height: 100vh;
-    background-color: skyblue;
-}
-
-.gpa-container{
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    width: 100vw;
+    background-color: white;
 }
 
 .bg-container-head{
+    text-align: center;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1.7em;
 }
 
-.calculator-container{
-    height: 80vh;
-    width: 90vw;
-    background-color: white;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    padding: 20px;
+.gpa-container{
+    width: 100vw;
+    background-color: grey;
+    padding: 15px;
 }
 
 .course-container{
     display: flex;
+    gap: 5px;
     align-items: center;
-    gap: 10px;
 }
 
 .course-container-name{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.course-container-name-head{
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1.5em;
 }
 
-.grade-container{
+.course-container-name-value{
+    padding: 10px;
+    width: 45vw;
+    border-radius: 8px;
+    font-family: 'Times New Roman', Times, serif;
+    border-width: 0px;
+    font-size: 1em;
+}
+
+.course-container-value{
     display: flex;
     gap: 10px;
 }
 
-.grade-container-head{
-    font-size: 1.3em;
+.course-container-value-head{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5em;
+}
+
+.course-container-inner-value{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.course-container-value-head{
+    font-size: 1.5em;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.course-container-inner-credit{
+    padding: 8px;
+    border-radius: 8px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1em;
 }
