--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 .bg-container{
     height: 100vh;
     width: 100vw;
-    background-color: white;
+    background-color: wheat;
 }
 
 .bg-container-head{
